changed index.html header name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="dino.js"></script>
     </head>
     <body>
-        <h1>Chrome Dinosaur Game</h1>
+        <h1>Portfolio Dino Game</h1>
         <canvas id="board"></canvas>
     </body>
 </html>
