--- a/hockey.html
+++ b/hockey.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
+<script src="/socket.io/socket.io.js"></script>
+<script src="client.js"></script>
 <html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
         <title>Air Hockey</title>
-        <script src="hockey.js"></script>
+        <script src="client.js"></script>
     </head>
     <body>
         <h1>Portfolio Air Hockey</h1>
