initial creation of bar agent. includes drink data but is incomplete. connects to gemeni api.

--- a/home.html
+++ b/home.html
@@ -9,5 +9,6 @@
         <h1>Simple Game Portfolio Home Page</h1>
         <p><a href="dino.html">Play Dino Game</a></p>
         <p><a href="hockey.html">Play Air Hockey</a></p>
+        <p><a href="BarAgent.html">Access AI Bar Agent</a></p>
     </body>
 </html>
