--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
-        <title>Chrome Dinosaur Game</title>
+        <title>Daikon Dinosaur Game</title>
         <link rel="stylesheet" href="dino.css">
         <script src="dino.js"></script>
     </head>
