--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
         <title>Simple Game Portfolio</title>
+        <script src="server.js"></script>
     </head>
     <body>
         <h1>Simple Game Portfolio Home Page</h1>
