create server.js that acts as a main server

--- a/home.html
+++ b/home.html
@@ -9,7 +9,8 @@
     <body>
         <h1>Simple Game Portfolio Home Page</h1>
         <p><a href="dino.html">Play Dino Game</a></p>
-        <p><a href="hockey.html">Play Air Hockey</a></p>
+        <p><a href="./air-hockey">Play Air Hockey</a></p>
+        <p><a href="totem.html">Play Prophecy of the Totem</a></p>        
         <p><a href="BarAgent.html">Access AI Bar Agent</a></p>
     </body>
 </html>
